# mev-template-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  block_history.py  build.rs
src/: address_book.rs  addresses.rs  alert.rs  block_scanner.rs  config.rs  dex.rs  helpers.rs  lib.rs  main.rs  mempool.rs  uni.rs
src/abi/: ERC20.json  LpPair.json  UniV2Factory.json  UniV2Router.json
src/bindings/: erc20.rs  lp_pair.rs  mod.rs  uni_v2_factory.rs  uni_v2_router.rs
src/contracts/: contract.sol
